# modern-search-engine

./:  schema.sql  .env  .github:workflows:ci.yml  .gitignore  Cargo.toml  README.md  dev-doc.md  index_old.html  lib.rs  list-directory-script.sh  mcp.config.js.html  migrations.sql  package-lock.json  package.json  readme2.md  schema.sql  setup.sh  setup.sql  setup_db.sh  setup_vector.sql  tailwind.config.js  test_connection.rs  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: ci.yml
backend/src/: helpers.rs  mod.rs  processor.rs  store.rs  suggestions.rs  types.rs
docs/: API.md  ARCHITECTURE.md  SETUP.md
examples/: upload_test_docs.rs
migrations/: 000001_init_extensions.sql  000002_create_tables.sql  1_init_schema.sql  20240320000000_init.sql  20240323000000_init.sql  20240324000000_init_vector_support.sql  20240324001000_fix_vector_type.sql  20240324002000_fix_vector_handling.sql  20240324003000_fix_vector_ops.sql  20241120082801_init.sql  20241203195559_create_tables.sql  init.sql
modern-search-engine/: package-lock.json  package.json
modern-search-engine/src/: App.tsx
new-files/: document-api.rs  document-ingestion.rs  document-processing-ui.tsx  document-processor.rs  document-upload-ui.tsx  enhanced-search.rs  enhanced-upload-ui.tsx  hybrid-search-handler.rs  integrated-document-processor.rs  search-handler-enhanced.rs  search-results-demo.tsx  search-results-ui.tsx  search-test-script.rs  search-tests.rs  search-ui-enhanced.tsx  vector-search-demo.tsx  vector-search-ui.tsx
scripts/: setup.sh  test.sh  verify-structure.sh
server/: mcp-server.ts  tsconfig.json
src/: App.tsx  data_layer.rs  data_service.rs  error.txt  lib.rs  main.rs  main.tsx  mockData-old.ts  mockData.ts  query_expander.rs  scoring.rs  search_handler.rs  search_result.rs  semantic_analysis.rs  spell_checker.rs  tests.rs  trie.rs  types.rs  types.ts
src/__tests__/: setup.ts
src/api/: error.rs  errors.rs  filters.rs  handlers.rs  mod.rs  processor.rs  routes.rs  search.ts  types.rs
src/components/: DocumentUpload.tsx  Navigation.tsx
src/config/: database.rs  mod.rs  search.rs  settings.rs
src/contexts/: SearchContext.tsx
src/database/: migrations.rs  mod.rs
src/document/: ProcessingStatus.tsx  ingestion.rs  mod.rs  processor.rs  store.rs  types.rs
src/hooks/: useGitChanges.ts  useSearchLogic.ts
src/pages/: Search.tsx  Searchnewold.tsx  Upload.tsx  search.ts
src/search/: engine.rs  executor.rs  mod.rs  query_parser.rs  scoring.rs  types.rs
src/services/: api.ts  documentService.ts  mockApi.ts  uploadService.ts
src/styles/: globals.css
src/telemetry/: metrics.rs  mod.rs  tracing.rs
src/types/: dropzone.d.ts  search.ts  test.txt
src/utils/: helpers.rs  mod.rs  url.rs
src/vector/: embeddings.rs  mod.rs  store.rs  types.rs
static/: index.html  search.html
tests/: api_tests.rs  document_processor_tests.rs  document_tests.rs  integration_tests.rs  search_tests.rs  unit_tests.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  App_old.tsx  main.tsx  main_old.tsx  types.ts
upload_test_files/: index.html
(+39 files in other folders)
