[package]
name = "modern-search-engine"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
lazy_static = "1.4"
rayon = "1.8"
ndarray = "0.15"
base64 = "0.21"
sha2 = "0.10"
config = "0.13"
url = "2.4"
num_cpus = "1.16"
ammonia = "3.3"